<resources>
    <string name="app_name">OurThingSee</string>

    <!-- Toast for login activity if succeeded [CHAR LIMIT=NONE] -->
    <string name="login_toast_login_succeeded">Login succeeded!</string>

    <!-- Toast for login activity if failed [CHAR LIMIT=NONE] -->
    <string name="login_toast_login_failed">Wrong email or password!</string>

    <!-- Toast for login activity if failed, blame the internet [CHAR LIMIT=NONE] -->
    <string name="login_toast_login_failed_nointernet">No Internet connection!</string>

    <string name="login_toast_short_pw_miss_number">Password must contain at least one number!</string>
    <string name="login_toast_invalid_email">Invalid email address!</string>
    <string name="location_option">Location</string>
    <string name="temperature_option">Temperature</string>
    <string name="humidity_option">Humidity</string>
    <string name="luminance_option">Light level</string>

    <!-- Label name in Myhome layout, for time go back to home [CHAR LIMIT=30] -->
    <string name="myhome_layout_time_back">Quiet period end time</string>

    <!-- Label name in Myhome layout, for minimum humidity level [CHAR LIMIT=30] -->
    <string name="myhome_layout_min_humid">Minimum humidity level (%)</string>

    <!-- Label name in Myhome layout, for minimum light level [CHAR LIMIT=30] -->
    <string name="myhome_layout_min_light">Minimum light level (lux)</string>

    <!-- Label name in Myhome layout, for update interval [CHAR LIMIT=30] -->
    <string name="myhome_layout_update_interval">Update interval (min)</string>

    <!-- Option name for My Home purpose, which measure light, humidity and tempt [CHAR LIMIT=30] -->
    <string name="myhome_option">Environment Sensors</string>

    <!-- Label for turn on notification option in my home activity [CHAR LIMIT=20] -->
    <string name="myhome_notification_turnon_label">Turn on notification</string>

    <!-- Description for turn on notification option in my home activity [CHAR LIMIT=NONE] -->
    <string name="myhome_notification_turnon_desc">Notify user whenever humidity and/or light level fall below a minimum level.\nOnly notify outside quiet time.</string>

    <!-- The default string value for display texts in MyHome activity [CHAR LIMIT=50] -->
    <string name="myhome_default_novalue">No value found</string>

    <!-- Dialog title for minimum humidity number picker [CHAR LIMIT=NONE] -->
    <string name="myhome_dialog_title_humidity">Select your minimum humidity level (%)</string>

    <!-- Dialog title for minimum light level dialog picker [CHAR LIMIT=NONE] -->
    <string name="myhome_dialog_title_light">Select your minimum light level</string>

    <!-- Dialog title for notification interval number picker [CHAR LIMIT=NONE] -->
    <string name="myhome_dialog_title_notfinterval">Select your notification interval (min)</string>

    <!-- https://www.noao.edu/education/QLTkit/ACTIVITY_Documents/Safety/LightLevels_outdoor+indoor.pdf -->
    <!-- Array list for labels of luminance level [CHAR LIMIT=30] -->
    <string-array name="recommend_luminance_level_labels">
        <item>Finnish winter morning - 0</item>
        <item>Parking, Dark areas - 50</item>
        <item>Warehouses, Archives, Dining Areas - 150 </item>
        <item>Easy Office Work, Classes - 250</item>
        <item>Office Work, PC Work, Study, Lab - 500</item>
        <item>Supermarkets, Workshops, Office area - 750</item>
        <item>Sunlight - 2,000</item>
    </string-array>

    <!-- Array list for value of luminance level [CHAR LIMIT=NONE] -->
    <string-array name="recommend_luminance_level_values">
        <item>0</item>
        <item>50</item>
        <item>150</item>
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>2000</item>
    </string-array>

    <!-- Strings for graph SMA describe [CHAR LIMIT=30] -->
    <string name="graph_sma_des">Smoothed by SMA (%1$s)</string>


    <!-- Notification for humidity [CHAR LIMIT=30] -->
    <string name="notification_humidity">"Current humidity level: %1$.0f"</string>

    <!-- Notification for humidity [CHAR LIMIT=30] -->
    <string name="notification_luminance">"Current light level: %1$.0f"</string>

    <!-- General toast for fetch data if response is failed, blame everybody [CHAR LIMIT=NONE] -->
    <string name="fetch_toast_response_failed_general">@string/login_toast_login_failed_nointernet</string>

    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

    <string name="no_location">No location found!</string>


    <!-- The developers' name in "About us"-->
    <string name="about_name">Developer</string>
    <string name="about_name1">Chi Nhan Phan</string>
    <string name="about_name2">Giang Pham</string>
    <string name="about_name3">Jingxuan Wu</string>

    <!-- The basic information about our app-->
    <string name="information_about_app">    This application is used for storing wine and delivering wine.
    We use Thingsee to monitor the temperature, pressure and humidity in the wine cellar to keep the
        environment being the most suitable for wine.
    We also use the position service to check the path when the staffs deliver wine to shops. \n\n
    We also use the application to monitor our own room environment, check the ideal humidity level for the room,
        as well as the suitable light level depend on working condition (play game, study or office work). \n\n
    To make the application work properly, you need to set up your own Thingsee unit, and allow it to
        measure Location (for map), Humidity, Temperature, Luminance (Light). The application was
        tested with a Thingsee unit that has location sensor update time interval of 10 second, and
        other sensors update time interval of 15 minutes.</string>
    <string name="getting_current_location">Getting last location</string>
    <string name="drawing_path">Drawing path</string>
    <string name="no_path">No path found in given time interval!</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="go">Go</string>
    <string name="total_distance">Total distance:</string>
    <string name="last_location">Last location</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>

    <!-- The confirmation message if user click on the log out button [CHAR LIMIT=NONE] -->
    <string name="log_out_message">Are you sure you want to log out?\nYour username and password will be required to open the application again.</string>
    <string name="only_location">Only location</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="no_data">no data</string>
    <string name="location">Location</string>

    <string name="endtime">EndTime</string>
    <string name="enddate">EndDate</string>
    <string name="starttime">StartTime</string>
    <string name="startdate">StartDate</string>
    <string name="other">Other</string>
    <string name="getting_data">Getting data&#8230;</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="temp">Temperature</string>
    <string name="humid">Humidity</string>
    <string name="lumi">Luminance</string>
    <string name="nodatafound">No data found in given time interval</string>
    <string name="graphing">Graphing data&#8230;</string>
    <string name="oneValFound">Only one value found!</string>
    <string name="show_statistics">Show statistics</string>
    <string name="hours_of_day">Hours of Day</string>
    <string name="line">" line"</string>
    <string name="graph_of">"Graph of "</string>
    <string name="in">" in "</string>
    <string name="minimum_allowed_value">Minimum allowed value</string>
    <string-array name="nav_item_activity_titles">
        <item>Location</item>
        <item>Environment Sensors</item>
    </string-array>
</resources>
