<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">


        <ImageView
            android:id="@+id/imgAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="10"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            tools:src="@drawable/about"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="120dp"
            android:paddingLeft="20dp"
            android:text="@string/about_name"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:paddingLeft="50dp"
            android:text="@string/about_name1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name1"
            android:paddingLeft="50dp"
            android:text="@string/about_name2"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name2"
            android:layout_marginBottom="20dp"
            android:paddingLeft="50dp"
            android:text="@string/about_name3"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name3"
            android:layout_marginBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/information_about_app"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information_about_app"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/colorPrimary"
            android:text="Back"
            android:textColor="@android:color/white"/>

    </RelativeLayout>
</ScrollView>
