<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="metro.ourthingsee.activities.MainActivity">

    <com.google.android.gms.maps.MapView
        android:id="@+id/fragment_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_show_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/material_design_guide_padding"
        android:src="@drawable/signs"
        app:backgroundTint="#e91e63"
        app:fabSize="normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/material_design_guide_padding"
        android:src="@drawable/location"
        app:backgroundTint="#2196f3"
        app:fabSize="normal" />

    <RelativeLayout
        android:id="@+id/query_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#da5D4037"
            android:elevation="6dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/start"
                android:layout_toStartOf="@+id/btn_showPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/material_design_item_guide_padding"
                android:paddingRight="@dimen/material_design_item_guide_padding"
                android:paddingTop="@dimen/material_design_item_guide_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/from"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/tv_startDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="01 Th3 2016"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_startTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    tools:text="23:59"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_toStartOf="@+id/btn_showPath"
                android:layout_below="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/material_design_item_guide_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/to"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/tv_endDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="01 Th3 2016"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_endTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    tools:text="23:59"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:layout_centerVertical="true"
                android:id="@+id/btn_showPath"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/go"
                android:textColor="#ffffff"
                android:scaleType="centerInside"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/material_design_guide_padding"
            android:backgroundTint="#e4ffffff"
            android:elevation="6dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/material_design_guide_padding"
                    android:layout_marginLeft="@dimen/material_design_guide_padding"
                    android:layout_marginRight="@dimen/material_design_guide_padding"
                    android:layout_marginBottom="@dimen/material_design_item_guide_padding"
                    android:lines="1"
                    android:text="@string/total_distance"
                    android:textColor="#000000"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/material_design_guide_padding"
                    android:layout_marginRight="@dimen/material_design_guide_padding"
                    android:layout_marginBottom="@dimen/material_design_guide_padding"
                    android:lines="1"
                    android:text="0 m"
                    android:textSize="20sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
